# agent-sdk

./: .coverage  .env.example  .gitignore  DOCS_CONSOLIDATION_SUMMARY.md  Dockerfile  MANIFEST.in  README.md  agent_sdk.db  alembic.ini  build.sh  docker-compose.test.yml  docker-compose.yml  pyproject.toml  setup.cfg  setup.py
.bin/: create.sh  unzip.sh
agent_sdk/: __init__.py  archival.py  billing.py  docs.py  encryption.py  exceptions.py  logging_config.py  privacy.py  sandbox.py  secrets.py  secrets_rotation.py  security.py  validators.py  versioning.py  webhooks.py
agent_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
agent_sdk/agents/: orchestrator.py
agent_sdk/cli/: commands.py  main.py
agent_sdk/config/: loader.py  model_config.py  parity.py  rate_limit.py
agent_sdk/coordination/: __init__.py  aggregator.py  conflict_resolver.py  message_bus.py  orchestrator.py  session.py
agent_sdk/core/: __init__.py  agent.py  context.py  messages.py  model_routing.py  retry.py  runtime.py  streaming.py  streaming_support.py  tool_schema.py  tool_schema_generator.py  tools.py
agent_sdk/dashboard/: server.py
agent_sdk/data_connectors/: __init__.py  chunking.py  database_adapter.py  document.py  extended_connectors.py  pdf_loader.py  structured_loader.py  web_scraper.py
agent_sdk/execution/: __init__.py  durable_queue.py  executor.py  parallel.py  parallel_executor.py  queue.py  step_result.py
agent_sdk/finetuning/: __init__.py  adapter.py  dataset.py  job.py  metrics.py  orchestrator.py
agent_sdk/human_in_the_loop/: __init__.py  agent.py  approval.py  feedback.py
agent_sdk/identity/: __init__.py  providers.py
agent_sdk/interfaces/: __init__.py  contracts.py
agent_sdk/llm/: base.py  health.py  mock.py  model_router.py  provider.py  router.py
agent_sdk/memory/: __init__.py  compression.py  embeddings.py  persistence.py  semantic_memory.py  semantic_search.py
agent_sdk/observability/: __init__.py  audit_logs.py  bus.py  cost_tracker.py  event_retention.py  events.py  metrics.py  metrics_pipeline.py  otel.py  profiler.py  prometheus.py  redaction.py  run_logs.py  sinks.py  stream_envelope.py
agent_sdk/planning/: __init__.py  plan_schema.py  planner.py  react_enhanced.py  react_executor.py  react_pattern.py
agent_sdk/plugins/: loader.py
agent_sdk/policies/: __init__.py  prompt_registry.py
agent_sdk/policy/: __init__.py  engine.py  types.py
agent_sdk/presets/: __init__.py  builtin.py  runtime.py
agent_sdk/prompt_management/: __init__.py  manager.py
agent_sdk/registry/: __init__.py  base.py  local.py
agent_sdk/reliability/: __init__.py  policy.py
agent_sdk/routing/: __init__.py  conditions.py  decision_tree.py  metrics.py  strategies.py
agent_sdk/server/: admin_ui.py  app.py  channels.py  device_registry.py  gateway.py  idempotency.py  multi_tenant.py  run_store.py  scheduler.py
agent_sdk/storage/: __init__.py  base.py  control_plane.py  postgres.py  sqlite.py
agent_sdk/testing/: __init__.py  mocks.py
agent_sdk/tool_packs/: __init__.py  builtin.py  manifest.py
agent_sdk/ui/: build.py  index.html
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_user_lifecycle.py  0003_org_residency_encryption.py  0004_governance_policy_bundles.py  0005_backup_records.py  0006_projects_and_project_keys.py  0007_webhooks_and_secrets_rotation.py  0008_policy_approvals_and_quotas.py
clients/js/: index.js
clients/python/: __init__.py  agent_sdk_client.py
deploy/alerts/: prometheus_rules.yaml
deploy/env/: local.env.example  production.env.example  staging.env.example
docs/: BACKUP_RECOVERY.md  COMPATIBILITY.md  DEPRECATION_POLICY.md  INDEX.md  MIGRATION_RUNBOOK.md  OBSERVABILITY.md  PLATFORM_BUILDER_GUIDE.md  PRODUCTION_HARDENING.md  PROVIDERS.md  RELEASE_HARDENING.md  USER_MANUAL.md  VERSIONING_POLICY.md
documents/: 00_ANALYSIS_COMPLETE.md  00_DOCUMENTATION_INDEX.md  00_GETTING_STARTED.md  ANALYSIS_SUMMARY.md  BATTERY_INCLUDED_PLATFORM_PLAN.md  BUILD_AND_DISTRIBUTION.md  COMPLETE_COMPETITIVE_GAPS_REPORT.md  COMPLETION_REPORT.txt  COMPLETION_SUMMARY_MONTH4.md  DEPLOYMENT_READY_SUMMARY.md  EXECUTIVE_STATUS_REPORT.md  EXECUTIVE_SUMMARY.md  FEATURE10_COMPLETE_REPORT.md  FEATURE9_DELIVERY_REPORT.md  GAPS_ANALYSIS_UPDATED.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INDUSTRY_COMPARISON_AND_GAPS.md  MONTH4_DOCUMENTATION_INDEX.md  MONTH4_PROGRESS.md  MONTH4_VISUAL_DASHBOARD.md  MONTH_1_QUICK_WINS_COMPLETE.md  MONTH_2_QUICK_WINS_COMPLETE.md  MONTH_3_ACHIEVEMENT_REPORT.md  MONTH_3_ACHIEVEMENT_REPORT_FINAL.md  MONTH_3_COMPLETION_CERTIFICATE.txt  MONTH_3_COMPLETION_VISUAL.md  MONTH_3_DOCUMENTATION_INDEX.md  MONTH_3_FEATURE6_DELIVERY.md  MONTH_3_FEATURE6_OTEL_COMPLETE.md  MONTH_3_FEATURE7_TOOL_SCHEMA_COMPLETE.md  MONTH_3_FEATURE8_STREAMING_COMPLETE.md  MONTH_3_FINAL_STATUS.md  MONTH_3_QUICK_WINS_PLAN.md  MONTH_3_STATUS.md  MONTH_4_DOCUMENTATION_INDEX.md  MONTH_4_FEATURE10_DOCUMENTATION_INDEX.md  MONTH_4_FEATURE10_SESSION_COMPLETE.md  MONTH_4_FEATURE9_ACHIEVEMENT_SUMMARY.md  MONTH_4_FEATURE9_ROUTING_COMPLETE.md  (+25 more)
scripts/: migrate_alembic.py  migrate_storage.py
tests/: conftest.py  test_admin_data_deletion.py  test_aggregator.py  test_alembic_setup.py  test_api.py  test_api_contract_v1.py  test_api_key_limits.py  test_api_key_middleware.py  test_api_key_rotation.py  test_api_versioning.py  test_archival.py  test_audit_export.py  test_backup_records.py  test_billing_cli.py  test_billing_report.py  test_channel_webhook.py  test_cli_compat.py  test_cli_doctor.py  test_cli_init.py  test_cli_presets.py  test_compliance_controls.py  test_compliance_report.py  test_conflict_resolver.py  test_contract_fixtures.py  test_control_plane_sqlite.py  test_correlation_ids.py  test_cost_tracker.py  test_cost_tracking.py  test_data_connectors.py  test_device_registry_endpoints.py  test_durable_queue.py  test_embeddings.py  test_env_parity.py  test_event_replay_endpoint.py  test_event_retention.py  test_exceptions.py  test_execution_queue.py  test_execution_strategy.py  test_extended_connectors.py  test_finetuning.py  (+101 more)
(+26 files in other folders)
