[project]
name = "agent-sdk"
version = "0.1.0"
description = "A modular agent framework with planning, execution, tools, rate limiting, observability, plugins, CLI, server, and dashboard."
authors = [{ name="Hongwei" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.12.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[project.scripts]
agent-sdk = "agent_sdk.cli.main:main"

[project.entry-points."agent_sdk.tools"]
# plugin_name = "module:function"

[project.entry-points."agent_sdk.agents"]
# plugin_name = "module:AgentClass"

[project.entry-points."agent_sdk.llm"]
# plugin_name = "module:LLMClientClass"
