[project]
name = "agent-sdk"
version = "0.1.0"
description = "A modular agent framework with planning, execution, tools, rate limiting, observability, plugins, CLI, server, and dashboard."
authors = [{ name="Hongwei" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["agent", "llm", "planning", "execution", "tools", "framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml>=6.0,<7.0",
    "typer>=0.12.0,<0.13",
    "fastapi>=0.110.0,<0.111",
    "uvicorn>=0.29.0,<0.30",
    "pydantic>=2.0,<3.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<8.0",
    "pytest-asyncio>=0.21,<0.22",
    "pytest-cov>=4.0,<5.0",
    "black>=23.0,<24.0",
    "mypy>=1.0,<2.0",
    "pylint>=2.16,<3.0",
    "pre-commit>=3.0,<4.0",
    "httpx>=0.27,<0.28",
    "pandas>=2.0,<3.0",
    "numpy>=1.24,<3.0",
    "requests>=2.31,<3.0",
    "beautifulsoup4>=4.12,<5.0",
    "tiktoken>=0.6,<1.0",
    "sentence-transformers>=2.6,<3.0",
    "openai>=1.0,<2.0",
    "boto3>=1.34,<2.0",
    "elasticsearch>=8.0,<9.0",
]

test = [
    "pytest>=7.0,<8.0",
    "pytest-asyncio>=0.21,<0.22",
    "pytest-cov>=4.0,<5.0",
    "httpx>=0.27,<0.28",
    "pandas>=2.0,<3.0",
    "numpy>=1.24,<3.0",
    "requests>=2.31,<3.0",
    "beautifulsoup4>=4.12,<5.0",
    "tiktoken>=0.6,<1.0",
    "sentence-transformers>=2.6,<3.0",
    "openai>=1.0,<2.0",
    "boto3>=1.34,<2.0",
    "elasticsearch>=8.0,<9.0",
]

connectors = [
    "boto3>=1.34,<2.0",
    "elasticsearch>=8.0,<9.0",
    "requests>=2.31,<3.0",
    "beautifulsoup4>=4.12,<5.0",
    "pandas>=2.0,<3.0",
]

embeddings = [
    "openai>=1.0,<2.0",
    "sentence-transformers>=2.6,<3.0",
    "tiktoken>=0.6,<1.0",
    "numpy>=1.24,<3.0",
]

tests-full = [
    "pytest>=7.0,<8.0",
    "pytest-asyncio>=0.21,<0.22",
    "pytest-cov>=4.0,<5.0",
    "httpx>=0.27,<0.28",
    "pandas>=2.0,<3.0",
    "numpy>=1.24,<3.0",
    "requests>=2.31,<3.0",
    "beautifulsoup4>=4.12,<5.0",
    "tiktoken>=0.6,<1.0",
    "sentence-transformers>=2.6,<3.0",
    "openai>=1.0,<2.0",
    "boto3>=1.34,<2.0",
    "elasticsearch>=8.0,<9.0",
]

[project.scripts]
agent-sdk = "agent_sdk.cli.main:main"

[project.entry-points."agent_sdk.tools"]
# plugin_name = "module:function"

[project.entry-points."agent_sdk.agents"]
# plugin_name = "module:AgentClass"

[project.entry-points."agent_sdk.llm"]
# plugin_name = "module:LLMClientClass"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=agent_sdk --cov-report=html --cov-report=term-missing --cov-fail-under=20"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py39']

[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "agent_sdk",
    "agent_sdk.agents",
    "agent_sdk.cli",
    "agent_sdk.config",
    "agent_sdk.coordination",
    "agent_sdk.core",
    "agent_sdk.dashboard",
    "agent_sdk.data_connectors",
    "agent_sdk.execution",
    "agent_sdk.finetuning",
    "agent_sdk.human_in_the_loop",
    "agent_sdk.llm",
    "agent_sdk.memory",
    "agent_sdk.observability",
    "agent_sdk.planning",
    "agent_sdk.plugins",
    "agent_sdk.prompt_management",
    "agent_sdk.routing",
    "agent_sdk.server",
]
include-package-data = true

[tool.setuptools.package-data]
agent_sdk = ["py.typed"]

[project.urls]
Documentation = "https://github.com/VariaSense/agent-sdk/blob/main/docs/INDEX.md"
Repository = "https://github.com/VariaSense/agent-sdk"
"Bug Tracker" = "https://github.com/VariaSense/agent-sdk/issues"

[tool.bdist-wheel]
universal = false
